--- a/templates/index.html
+++ b/templates/index.html
@@ -500,7 +500,7 @@
                 >
                   <div class="text-center">
                     <h2 class="text-white mb-2">Kluster 2</h2>
-                    <p class="mb-0">Transisi</p>
+                    <p class="mb-0">Potensial Pangan</p>
                   </div>
                 </div>
               </div>
