Update potensial pangan

--- a/templates/prediksi.html
+++ b/templates/prediksi.html
@@ -710,7 +710,7 @@
       function getFoodSecurityCategory(ikp) {
         if (ikp >= 80) {
           return {
-            category: "Klaster 2 - Transisi",
+            category: "Klaster 2 - Potensial Pangan",
             status: "Cukup Stabil",
             statusClass: "status-warning",
             recommendation:
