--- a/templates/index.html
+++ b/templates/index.html
@@ -285,7 +285,7 @@
                 <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
                 <h5 class="mb-3">Analisis Prediktif</h5>
                 <p>
-                  Menggunakan XGBoost dan SVR untuk prediksi Indeks Ketahanan
+                  Menggunakan XGBoost untuk prediksi Indeks Ketahanan
                   Pangan dengan akurasi tinggi
                 </p>
               </div>
