--- a/templates/index.html
+++ b/templates/index.html
@@ -362,7 +362,7 @@
             </p>
             <p class="mb-4">
               PANGANET mengintegrasikan unsupervised learning (K-Medoids) dan
-              supervised learning (XGBoost, SVR, Random Forest) untuk
+              supervised learning (XGBoost) untuk
               menganalisis faktor-faktor penentu ketahanan pangan secara
               kontekstual berdasarkan karakteristik wilayah.
             </p>
@@ -376,7 +376,7 @@
               <div class="col-sm-6">
                 <p class="mb-0">
                   <i class="fa fa-arrow-right text-primary me-2"></i>Machine
-                  Learning Multi-Model
+                  Learning
                 </p>
               </div>
               <div class="col-sm-6">
@@ -400,7 +400,7 @@
               <div class="col-sm-6">
                 <p class="mb-0">
                   <i class="fa fa-arrow-right text-primary me-2"></i>Prediksi
-                  IKP Real-time
+                  IKP 
                 </p>
               </div>
             </div>
